--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@typescript-eslint/parser": "^5.41.0",
     "eslint": "^8.26.0",
     "jest": "^29.0.3",
+    "prettier": "2.7.1",
     "ts-jest": "^29.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^4.8.4"
