--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install modules
         run: yarn
+      - name: Format with Prettier
+        run: yarn prettier --check src
       - name: Lint with ESLint
         run: yarn eslint src
       - name: Check type compilation with TypeScript
