--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install modules
         run: yarn
-      - name: Format with Prettier
+      - name: Check formatting with Prettier
         run: yarn prettier --check src
       - name: Lint with ESLint
         run: yarn eslint src
