--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jest": "^29.0.3",
     "prettier": "2.7.1",
     "ts-jest": "^29.0.0",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "scripts": {
@@ -21,6 +21,7 @@
     "format:check": "prettier --check src",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start": "ts-node src/8kyu/double-sum/doubleSum.ts"
   }
 }
