--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
+    "outDir": "dist",
     "strict": true,
     "baseUrl": ".",
     "paths": {
